apps/arr-stack/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: arr-stack
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: optiplex
      containers:
      - name: gluetun
        image: qmcgaw/gluetun:v3.41.3
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:2.6.1-nightly
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: prowlarr-config
          mountPath: /config
      volumes:
      - name: prowlarr-config
        persistentVolumeClaim:
          claimName: prowlarr-config-pvc
