apps/arr-stack/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: arr-stack  
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: 9696
      protocol: TCP
      name: http
