apps/arr-stack/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-lan
  namespace: arr-stack
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-service
                port:
                  number: 9696
